[package]
name = "solana-nft-programs-use-invalidator"
version = "1.0.0"
description = "Usage invalidator and counter"
edition = "2021"
license = "AGPL-3.0"
keywords = ["solana"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_nft_programs_use_invalidator"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
spl-associated-token-account = "2.2.0"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
solana-program = "2.0.17"
solana-nft-programs-token-manager = { version = "1.0.0", path = "../solana-nft-programs-token-manager", features = ["cpi"] }
solana-nft-programs-payment-manager = { version = "1.1.0", features = ["cpi"] }
mpl-token-metadata = "4.1.2"
mpl-utils = "0.3.6"
arrayref = "0.3.9"

[dev-dependencies]
proptest = { version = "1.5" }